--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
   
 </head>
 <body>
-    
+
+<h1>Random Trivia Game</h1>
+    <div class="mainContainer">
+        <div id="timer"></div>
+        <div id="questions"></div>
+        <div id="answers"></div>
+
+        <button class="btn" id ="start">Start</button>
+        <br>
+        <button class="btn" id ="reset">Restart</button>
+
+    </div>
    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
    <script src="assets/javascript/javascript.js"></script>   
 </body>
