--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div id="questions"></div>
         <div id="answers"></div>
 
-        <button class="btn" id ="start">Start</button>
+        <button class="btn" id ="start">Start Game</button>
         <br>
         <button class="btn" id ="reset">Restart</button>
 
     </div>
    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-   <script src="assets/javascript/javascript.js"></script>   
+   <script type="text/javascript" src="assets/javascript/javascript.js"></script>   
 </body>
 </html>
